スリープ防止用のyoutube動画埋め込み

--- a/honpen.html
+++ b/honpen.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ながらフィットタイマー</title>
-    <link href="honpen.css" rel="stylesheet">
+    <link href="honpen.css" rel="stylesheet" />
     <script src="honpen.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header><div id="timer"></div></header>
-    <main><div id="move-title"></div></main>
-    <footer><div id="remaining-bar-bg"><div id="remaining-bar-fg"></div></div></footer>
-</body>
+    <main>
+      <div id="move-title"></div>
+      <div id="tap-to-start">タップで開始</div>
+    </main>
+    <footer>
+      <div id="remaining-bar-bg"><div id="remaining-bar-fg"></div></div>
+    </footer>
+    <iframe
+      wdth="560"
+      height="315"
+      src="https://www.youtube.com/embed/Cfuzq1rQ7lI"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <p>↑スリープ防止用動画</p>
+  </body>
 </html>
